--- a/testkit/Cargo.toml
+++ b/testkit/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
-ckb-script = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
+ckb-types = { git = "https://github.com/Taem42/ckb.git", rev = "4b8cb7c" }
+ckb-script = { git = "https://github.com/Taem42/ckb.git", rev = "4b8cb7c" }
 lazy_static = "1.3.0"
